--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,27 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <p>Welcome to the chat app</p>
+<body class="chat">
+  <div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+  </div>
+  <div class="chat__main">
 
-  <ol id="messages"></ol>
+      <ol id="messages" class="chat__messages"></ol>
+<div class="chat__footer">
+    <form id="message-form">
+        <input name="message" type="text" placeholder="message" autocomplete="off" autofocus>
+        <button>Send</button>
+      </form>
+      <button id="send-location">Send location</button>
+</div>
+      
+  </div>
 
-  <form id="message-form">
-    <input name="message" type="text" placeholder="Message"/>
-    <button>Send</button>
-  </form>
-  <button id="send-location">Send Location</button>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.1.0.min.js"></script>
