--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.1.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <script src="/js/index.js"></script>
+
 </body>
 
 </html>
