--- a/public/chat.html
+++ b/public/chat.html
@@ -3,11 +3,9 @@
 <html>
 
 <head>
-  <title>
-    Chat | ChatApp
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  </title>
   <meta charset="utf-8">
+  <title>Chat | ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -60,6 +58,7 @@
   <script src="/js/libs/jquery-3.1.0.min.js"></script>
   <script src="/js/libs/moment.js"></script>
   <script src="/js/libs/mustache.js"></script>
+  <script src="/js/libs/deparam.js"></script>
   <script src="/js/chat.js"></script>
 </body>
 
