--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <input type="text" name="name" autofocus/>
       </div>
       <div class="form-field">
-        <label>Room name</label>
+        <label>Group name</label>
         <input type="text" name="room"/>
       </div>
       <div class="form-field">
